--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,26 +3,30 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main # ビルドを実行するブランチを指定
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Use Node.js 14.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14.x
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
 
-    - name: Install Dependencies
-      run: npm install
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Build and Deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: node build.js
-      working-directory: ./scripts
-      with:
-        branch: 'gh-pages' # ビルドされたファイルをプッシュするブランチを指定
+      - name: Build and Deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          node build.js
+          git push --force "https://${GITHUB_TOKEN}@github.com/${{ github.repository }}.git" HEAD:${{ inputs.branch }}
+        working-directory: ./scripts
+        shell: bash
+        env:
+          branch: 'gh-pages'
